2009-06-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Created a new function to retrieve XML
	  tag values ('suppressempty' not needed anymore).

2009-06-01  Sancho Lerena <slerena@artica.es>

	*  util/pandora_diagnostic.sh: Command line diagnostic tool  for
	gather information in order to diagnose problems in system running
	Pandora FMS. This returns a txt file with a lot of system information.

2009-05-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Interrupt recon tasks being executed
	  if the task was deleted.

2009-05-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Disabled string comparisons for
	  equal/not_equal alerts (use regex instead).

2009-05-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed timestamps for data lists. Made
	  XML::Simple return an empty string instead of an empty hash when an
	  empty value is found in an XML data file.

2009-05-12  Sancho Lerena <slerena@gmail.com>

	* pandora_package_installer: Removed old, unused script.

2009-05-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Reset server status at start-up in case the
	  server did not cleanly shut down the last time.
	
	* bin/pandora_server: Fixed min_ff_event calculation.

2009-05-04  Ramon Novoa  <rnovoa@artica.es>


	* lib/PandoraFMS/DB.pm: Enabled mysql_auto_reconnect.

	* lib/PandoraFMS/SNMPServer.pm, lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/NetworkServer.pm, lib/PandoraFMS/WMIServer.pm: Log
	  error messages when external programs are not found.

2009-04-28  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Disabled output from snmptrapd.

	* lib/PandoraFMS/Core.pm: Allow string comparisons for equal/not_equal
	  alerts.

2009-04-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Generate one event for each alert (instead
	  of one event for each action).

2009-04-27  Ramon Novoa  <rnovoa@artica.es>
