@@ -1,3 +1,9 @@
+2009-06-05  Ramon Novoa  <rnovoa@artica.es>
+
+	* util/pandora_xml_stress.pl,
+	  util/pandora_xml_stress.README: Added to repository. XML stress tool
+	  and README.
+
 2009-06-02  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/DataServer.pm: Created a new function to retrieve XML
